recipes/static/recipes/css/recipes.css
/*------------Admin--------------------*/
.admin-section {
    background-color: #d4c059;
    width: 100%;
}

.admin-section .btn {
    display: block;
    width: 100%;
}

.button-edit {
    font-family: 'Bebas Neue', cursive;
    background-color: #1060d0;
    color: white;
    font-size: large;
    border: 1px solid #084ba8;
}

.button-edit:hover {
    background-color: #074294;
    border: 1px solid #012353;
    color: white;
    transition: 0.25s;
}

/*------------Recipes page----------------*/
.recipe-header {
    background-image: url('/media/pexels-dana-tentis-1152276.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    height: 30rem;
    background-position: center;
    color: white;
}

.recipe-list {
    border: 1px solid rgb(218, 192, 49, 0.5);
    background-color: #2d2d2d;
}

.recipe-list img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.recipe-list img:hover {
    opacity: 0.7;
}

.recipe-list .button-yellow {
    display: block;
}

.restricted-badge img {
    position: absolute;
    height: 6rem;
    width: 30%;
    left: 67%;
    object-fit: contain;
    filter: drop-shadow(2px 2px 3px black);
}

/*-----------Recipe-detail---------------*/
.recipe img {
    height: 18rem;
    width: 100%;
    object-fit: cover;
}

.featured-product {
    background: #d4c059;
}


.featured-product img {
    height: 10rem;
    object-fit: cover;
    filter: drop-shadow(2px 4px 6px black);
}

.featured-product img:hover {
    opacity: 0.7;
}

.other-recipe img {
    height: 10rem;
    object-fit: cover;
    width: 75%;
}

.blur {
    filter: blur(6px);
}

.restricted.container {
    position: absolute;
    top: 42rem;
    padding: 1rem;
}

.divider {
    border-top: 1px solid #d4c059;
    width: 80%;
}

/*--------Recipe forms----------*/
input[type="file"] {
    margin-bottom: 1rem;
}

/*------------------Tablets---------------------*/
@media(min-width: 768px) {

    /*------------Admin-----------*/
    .admin-section {
        display: flex;
    }

    .admin-section .btn {
        display: block;
        width: 49%;
    }

    /*---------Recipe-detail-------*/
    .recipe img {
        height: 22rem;
    }

    .featured-product img {
        height: 13rem;
    }

    .restricted.container {
        position: absolute;
        top: 48rem;
        padding: 1rem;
        left: 0;
        right: 0;
    }
}

/*------------------Laptops---------------------*/
@media(min-width: 992px) {

    /*------------Admin-----------*/
    .admin-section .btn {
        display: block;
        width: 30%;
    }

    /*---------------Recipes-Page-----------------*/
    .recipe-header {
        padding-top: 10rem;
    }

    .restricted-badge img {
        height: 7rem;
    }

    .recipe-list .button-yellow {
        width: 50%;
    }

    /*---------------Recipe-detail---------------*/
    .recipe img {
        height: 36rem;
        position: absolute;
        bottom: 40%;
        z-index: -1;
        width: 100%;
        border: 1px solid #d4c059;
    }

    .details {
        background-color: rgba(0, 0, 0, 0.6);
        height: 36rem;
    }

    .featured-product img {
        height: 15rem;
        object-fit: cover;
    }

    .restricted.container {
        top: 46rem;
        padding: 3rem;
    }
}

/*--------------XL screens------------------*/
@media(min-width:1200px) {
    .restricted.container {
        top: 44rem;
        padding: 3rem;
    }
}

